# InstaGeo-E2E-Geospatial-ML

./: README.md  pyproject.toml
instageo/apps/: app.py  viz.py
instageo/apps/2016/3/: seg_map_20160301_L30_T40RFP_2016034T063351_6_4.tif
instageo/model/: model.py  run.py
