[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.10
namespace_packages = true
incremental = false
cache_dir = ""
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "auth: Requires NASA EarthData Authentication"
]

[tool.poetry]
name = "instageo-e2e-geospatial-ml"
version = "0.1.0"
description = ""
authors = ["Sai <sai.dunoyer@eurotunnel.com>"]
readme = "README.md"
packages = [{include = "instageo_e2e_geospatial_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^6.0.0"
streamlit = "^1.42.0"
rasterio = "^1.4.3"
xarray = "^2025.1.2"
llvmlite = "^0.44.0"
toolz = "^1.0.0"
numba = "^0.61.0"
datashader = "^0.17.0"
pyproj = "^3.7.0"
scipy = "^1.15.1"
netcdf4 = "^1.7.2"
rioxarray = "^0.18.2"
streamlit-plotly-events = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
